--- a/Source/portalapp/templates/talks/talks_list.html
+++ b/Source/portalapp/templates/talks/talks_list.html
@@ -1,20 +1,51 @@
 {% extends 'talks/base.html' %}
 
 {% block content %}
+<!-- .header-bottom-wrapper -->
+<div class="header-bottom-wrapper">
+    <div class="container">
+        <div class="row">
+            <!-- Page Head -->
+            <div class="page-head col-lg-12">
+                <h2 class="page-title">Talks</h2>
+            </div>
+            <!-- End Page Head -->
+        </div>
+    </div>
+</div><!-- End of .header-bottom-wrapper -->
+
+<div class="page-container container">
+
+        <div class="row">
+
 {% for talk in talks %}
+
     <div class="post">
    <p><strong>Talk On: </stronge><a href="">{{talk.topic}} </a></p>
-   <p><strong>Speaker: </strong>{{talk.speaker}} </p>   
+   <p><strong>Speaker: </strong>{{talk.speaker}} </p>
 <div class="date">
    <p><strong>Date & Time: </strong>{{talk.date_and_time}} </p>
 </div>
 
  <p><strong>Venue: </strong>{{talk.venue}} </p>
-         <p><strong>Abstract: </strong>{{talk.abstract|linebreaksbr}} </p>  
-        <p><strong>Bio of the Speaker: </strong>{{talk.bio|linebreaksbr}}</p>
-        <p><strong>Faculty Coordinator: </strong>{{talk.coordinator}}</p>
+         <p><strong>Abstract: </strong>{{talk.abstract|linebreaksbr}} </p>
+         <dl class="toggle clearfix">
+           <dt><span class="glyphicon glyphicon-chevron"></span>Read More</dt>
+        <dd><p><strong>Bio of the Speaker: </strong>{{talk.bio|linebreaksbr}}</p>
+        <p><strong>Faculty Coordinator: </strong>{{talk.coordinator}}</p></dd>
+        </dl>
+        <dl class="toggle clearfix">
+                        <dt><span class="glyphicon glyphicon-chevron"></span>First Accordion Item</dt>
+                        <dd>Although starting a prototype on a is sometimes easi problem-solve. When you need to ideate website prototype on a is sometimes easier, it’s not the best When you or to storyboard context Although starting a prototype on a is sometimes easi problem- solve. When you need to ideate website …</dd>
+                        <dt><span class="glyphicon glyphicon-chevron"></span>Second Accordion Item</dt>
+                        <dd>Although starting a prototype on a is sometimes easi problem-solve. When you need to ideate website prototype on a is sometimes easier, it’s not the best When you or to storyboard context Although starting a prototype on a is sometimes easi problem- solve. When you need to ideate website …</dd>
+                        <dt><span class="glyphicon glyphicon-chevron"></span>Third Accordion Item</dt>
+                        <dd>Although starting a prototype on a is sometimes easi problem-solve. When you need to ideate website prototype on a is sometimes easier, it’s not the best When you or to storyboard context Although starting a prototype on a is sometimes easi problem- solve. When you need to ideate website …</dd>
+                    </dl>
     </div>
 {% endfor %}
+</div>
+</div>
+
 
 {% endblock %}
-
