--- a/Source/portalapp/templates/talks/talk_edit.html
+++ b/Source/portalapp/templates/talks/talk_edit.html
@@ -1,9 +1,34 @@
 {% extends 'talks/base.html' %}
 {% block content %}
-    <h1>New Talk</h1>
-    <form method="POST" class="post-form">{% csrf_token %}
+<!-- .header-bottom-wrapper -->
+<div class="header-bottom-wrapper">
+    <div class="container">
+        <div class="row">
+            <!-- Page Head -->
+            <div class="page-head col-lg-12">
+                <h2 class="page-title">Talks</h2>
+            </div>
+            <!-- End Page Head -->
+        </div>
+    </div>
+</div><!-- End of .header-bottom-wrapper -->
+
+<div class="page-container container">
+
+        <div class="row">
+
+
+          <section id="contact-form">
+
+    <div class="col-lg-6 col-md-6 col-sm-6">
+
+    <form method="POST" class="contact-form">{% csrf_token %}
         {{ form.as_p }}
         <button type="submit" class="save btn btn-default">Save</button>
     </form>
-{% endblock %}
+  </section>
+  </div>
+</div>
+</div>
 
+{% endblock %}
